[project]
name = "song-virality"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Caleb", email = "calebmahweekeat@gmail.com"},
]
dependencies = ["pandas>=2.2.3"]
requires-python = "==3.13"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
